--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
         <h2>Feature toggles</h2>
         <ul>
           <li>
-            <a href="/?shim=0">Disable shim for auto-expand details elements</a>
+            <a href="./?shim=0">Disable shim for auto-expand details elements</a>
           </li>
-          <li><a href="/?bfcache=0">Disable b/f cache</a></li>
-          <li><a href="/?shim=0&bfcache=0">Disable both</a></li>
+          <li><a href="./?bfcache=0">Disable b/f cache</a></li>
+          <li><a href="./?shim=0&bfcache=0">Disable both</a></li>
         </ul>
         <h2>Table of Contents</h2>
         <ul>
