add repository link

--- a/index.html
+++ b/index.html
@@ -112,6 +112,11 @@
               >Go to example.com (for browser back test)</a
             >
           </li>
+          <li>
+            <a href="https://github.com/mizdra/auto-expand-details-when-scrolling-to-fragment"
+              >Go to repository</a
+            >
+          </li>
         </ul>
         <div id="scroll-to-element">Scroll to element</div>
         <div>
